# Theseus

./: AUTHORS  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: ci-nightly.yml  ci-quick.yml  doxygen.yml
TestCases/Euler/2D/DoubleMachReflection/: config.json
TestCases/Euler/2D/IsentropicVortex/: config.json
TestCases/Euler/2D/Nagashima_Ramjet/TR0/: Nagashima_TR0_10kQuad_v2.msh  config.json
TestCases/GoldenData/IsentropicVortex/Cycle000500/: proc000000.vtu  proc000001.vtu
TestCases/GoldenData/LTEVortex/Cycle000200/: proc000000.vtu  proc000001.vtu
TestCases/GoldenData/LidDrivenCavity/Cycle004000/: data.pvtu  proc000000.vtu  proc000001.vtu
TestCases/GoldenData/TaylorGreenVortex2D/Cycle000100/: proc000000.vtu  proc000001.vtu
TestCases/LTE/Euler/LTEBlob/: config.json
TestCases/LTE/Euler/LTEVortex/: config.json
TestCases/NavierStokes/2D/LidDrivenCavity/: config.json
TestCases/NavierStokes/2D/TaylorGreenVortex/: TaylorGreenVortex2D.msh  config.json  tgv2d.geo
TestCases/NavierStokes/3D/TaylorGreenVortex/: config.json
ci-resources/: requirements-ci.txt
cmake/: TheseusConfig.hpp.in
docs/: README.md  boundaryconditions.md  discretization.md  mainpage.dox  numflux.md  theory.md
include/: ActivePhysics.hpp  BasicOperations.hpp  ChandrashekarFlux.hpp  ConditionFactory.hpp  DGSEMIntegrator.hpp  DGSEMNonlinearForm.hpp  EOS.hpp  EulerOperator.hpp  EulerOperator_impl.hpp  Flow.hpp  GasModel.hpp  GasState.hpp  HLLFlux.hpp  Indicator.hpp  LTEEOS.hpp  LTEGasModel.hpp  LTETable.hpp  LTETransport.hpp  LaxFriedrichsFlux.hpp  ModalBasis.hpp  NSOperator.hpp  NSOperator_impl.hpp  NavierStokesFlux.hpp  NumericalFlux.hpp  PerssonPeraireIndicator.hpp  Physics.hpp  RHSOperator.hpp  RHSOperator_impl.hpp  SimFactory.hpp  SimFactory_impl.hpp  Simulation.hpp  StateInit.hpp  StateInit.hpp.orig  Theseus.hpp  Transport.hpp  bc_cache_utilities.hpp  bc_kernels.hpp  dgsem_cache.hpp  dgsem_cache_utilities.hpp  json.hpp  (+3 more)
scripts/: compare_viz.py  genscal.py  install-deps.sh  launch_frontera_device.sh  run_theseus.sh
src/: DGSEMNonlinearForm.cpp  EulerOperator.cpp  Indicator.cpp  ModalBasis.cpp  PerssonPeraireIndicator.cpp  Simulation.cpp  main.cpp
tests/: CMakeLists.txt  eos_tests.cpp  gas_model_tests.cpp  gas_state_adapter.hpp  legacy_state_adapter.hpp  plato_helpers.hpp  state_semantics.hpp  state_tests.cpp  table_lookup_test.cpp  test_helpers.hpp  test_riemann_fluxes.cpp  test_stub.cpp  transport_tests.cpp  unit_test.hpp  unit_test_main.cpp
